# electroplating-stirrer

./: .gitignore  readme.md  repo.py  tasks.py  tasks_doc.py  usbtiny.py
EE/: .gitignore
EE/servo-control-module/: .gitignore  Electroplating-Stirrer-Control - CADLAB.io.url  cnc-common.config  cnc-drill.config  cnc-edge.config  imported_netlist.py  ipython.json  ipython_lib_sklib.py  kicad.py  kikit.sh  netlist.py  panel.json  pyproject.toml  readme.md  servo-control-module.kicad_pcb  servo-control-module.kicad_prl  servo-control-module.kicad_pro  servo-control-module.kicad_sch  skidl_schematic.py  tasks.py
EE/servo-control-module/CAM/: .gitignore  PC Board Isolation Routing - KiCad - HobbyCNC.url  alg-dev.ipynb  gbr2grbl.py  gcode_doc.py  gerber.json  graph2d.py  millproject  pcb_calcs.py  points.json  readme-isolation-milling.md  readme.md  requirements.txt  servo-control-module-millling.FlatPrj  tasks.py  tmp
EE/servo-control-module/Library.pretty/: Potentiometer_Amazon_Single_Horizontal.kicad_mod  USB-micro-breakout.kicad_mod
FW/: .gitignore  hw.c  hw.h  main.c  makefile
ME/: 8 pin IC socket.SLDPRT  Chassis-Lower.FCStd  Chassis-Upper.FCStd  Micro Servo 9g.SLDPRT  PCA-USB-micro-breakout.SLDASM  PCA-USB-micro-breakout.STEP  PCA-with-Components.FCStd  PCB-USB-micro-breakout.DXF  PCB-USB-micro-breakout.SLDPRT  Potentiometer.SLDPRT  Stirrer-Control-Module.SLDASM  chassis-lower.SLDPRT  chassis-lower.STL  chassis-upper.SLDPRT  chassis-upper.STL  kit-3pos-screw-down-terminal.STEP  pcb-speed-control.DXF  pcb-speed-control.SLDPRT  pcba-speed-control.SLDASM
