[project]
name = "servo-control-module"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "gerbonara>=1.4.0",
    "invoke>=2.2.0",
    "ipython>=9.2.0",
    "kinparse>=1.2.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "pyparsing>=3.2.3",
    "sh>=2.2.2",
]
